wb-mqtt-homeui (2.82.1-wb100) stable; urgency=medium

  * Fix WB-LED configuration

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 15 May 2024 16:07:51 +0500

wb-mqtt-homeui (2.82.1) stable; urgency=medium

  * Fix slave id editor in wb-mqtt-serial config

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 27 Mar 2024 10:47:41 +0500

wb-mqtt-homeui (2.82.0) stable; urgency=medium

  * Load device settings in wb-mqtt-serial config editor on demand

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Tue, 26 Mar 2024 14:19:21 +0500

wb-mqtt-homeui (2.81.3) stable; urgency=medium

  * Fix device type selection in wb-mqtt-serial config editor

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Fri, 22 Mar 2024 11:33:51 +0500

wb-mqtt-homeui (2.81.2) stable; urgency=medium

  * Adjust text style on tabs. No functional changes

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Fri, 22 Mar 2024 09:56:24 +0500

wb-mqtt-homeui (2.81.1) stable; urgency=medium

  * Use Back button to navigate from device settings to the list of devices and ports in wb-mqtt-serial config in mobile mode 

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Fri, 15 Mar 2024 11:02:18 +0500

wb-mqtt-homeui (2.81.0) stable; urgency=medium

  * New interface for wb-mqtt-serial config

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Fri, 15 Mar 2024 10:26:09 +0500

wb-mqtt-homeui (2.80.0) stable; urgency=medium

  * Add support for enums in templates

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Mon, 11 Mar 2024 15:37:00 +0400

wb-mqtt-homeui (2.79.3) stable; urgency=medium

  * Source code refactoring. No functional changes

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 06 Mar 2024 12:56:58 +0500

wb-mqtt-homeui (2.79.2) stable; urgency=medium

  * Source code refactoring. No functional changes
